--- a/scenario_04.html
+++ b/scenario_04.html
@@ -68,10 +68,11 @@
                 if (!this.input2) { return '' }
 
                 let input2_cav = parseCSV(this.input2)
+                console.log(input2_cav)
 
                 let count = 0
                 return this.input.replace(/^$|^\[台詞 [\S\s]+?(?=^\[)|^(\[台詞|^\*label|[^[;@{}\t*]).*$/gm, match => {
-                    return input2_cav[count++] || (match && "### 翻訳文が未入力です ###")
+                    return input2_cav[count++]?.[0] || (match && "### 翻訳文が未入力です ###\n")
                 })
             }
         }
