--- a/akabeko/01.html
+++ b/akabeko/01.html
@@ -3,14 +3,16 @@
         --rotate-speed: 1.9s;
         --x-speed: 2.9s;
         --y-speed: 2.3s;
+        --x-pos: 1.0em;
     }
 
     body {
-        margin: 3em 1em;
+        margin: 3em;
     }
 
     #akabeko_atama {
         position: fixed;
+        left: var(--x-pos);
     }
 
     #akabeko_atama .anime_rotate {
@@ -97,6 +99,7 @@
             <li><label><input type="range" min="0.1" max="8.0" step="0.1" value="1.9" onchange="document.documentElement.style.setProperty('--rotate-speed', this.value + 's')"> 首振り速度</label></li>
             <li><label><input type="range" min="0.1" max="8.0" step="0.1" value="2.3" onchange="document.documentElement.style.setProperty('--x-speed', this.value + 's')"> 上下速度</label></li>
             <li><label><input type="range" min="0.1" max="8.0" step="0.1" value="2.9" onchange="document.documentElement.style.setProperty('--y-speed', this.value + 's')"> 左右速度</label></li>
+            <li><label><input type="range" min="-1.0" max="3.0" step="0.1" value="1.0" onchange="document.documentElement.style.setProperty('--x-pos', this.value + 'em')"> 前後位置</label></li>
         </ul>
     </div>
 </div>
