--- a/akabeko/01.html
+++ b/akabeko/01.html
@@ -7,12 +7,12 @@
     }
 
     body {
-        margin: 3em;
+        margin: 3em 1em;
     }
 
     #akabeko_atama {
         position: fixed;
-        left: var(--x-pos);
+        margin-left: var(--x-pos);
     }
 
     #akabeko_atama .anime_rotate {
