--- a/akabeko/01.html
+++ b/akabeko/01.html
@@ -98,8 +98,8 @@
         <h2>せってい</h2>
         <ul>
             <li><label><input type="range" name="--rotate-speed" min="0.1" max="8.0" step="0.1" value="1.9" onchange="change_config(this.name, this.value + 's')"> 首振り速度</label></li>
-            <li><label><input type="range" name="--x-speed" min="0.1" max="8.0" step="0.1" value="2.3" onchange="change_config(this.name, this.value + 's')"> 上下速度</label></li>
-            <li><label><input type="range" name="--y-speed" min="0.1" max="8.0" step="0.1" value="2.9" onchange="change_config(this.name, this.value + 's')"> 左右速度</label></li>
+            <li><label><input type="range" name="--x-speed" min="0.1" max="8.0" step="0.1" value="2.3" onchange="change_config(this.name, this.value + 's')"> 左右速度</label></li>
+            <li><label><input type="range" name="--y-speed" min="0.1" max="8.0" step="0.1" value="2.9" onchange="change_config(this.name, this.value + 's')"> 上下速度</label></li>
             <li><label><input type="range" name="--x-pos" min="-1.0" max="3.0" step="0.1" value="1.0" onchange="change_config(this.name, this.value + 'em')"> 前後位置</label></li>
         </ul>
     </div>
