--- a/akabeko/02.html
+++ b/akabeko/02.html
@@ -76,11 +76,11 @@
 
     @keyframes tail {
         0% {
-            transform: rotate(00deg) translateY(1.8rem);
+            transform: rotate(00deg) translateY(1.8rem) translateX(0.2rem);
         }
 
         100% {
-            transform: rotate(30deg) translateY(1.8rem);
+            transform: rotate(30deg) translateY(1.8rem) translateX(0.35rem);
         }
     }
 
