--- a/akabeko/02.html
+++ b/akabeko/02.html
@@ -38,6 +38,10 @@
         animation: tail var(--tail-speed) ease-in-out infinite alternate;
     }
 
+    #neko {
+        filter: drop-shadow(2px 3px 12px rgba(16, 16, 16, 0.9));
+    }
+    
     #neko img {
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         backface-visibility: hidden;
