--- a/akabeko/03.html
+++ b/akabeko/03.html
@@ -1,3 +1,8 @@
+<!-- 
+    イラスト うにょーんセンパイ
+    https://twitter.com/oashis/status/1687926511305883648
+-->
+
 <style>
     :root {
         --yumemi-rotate-speed: 3.5s;
@@ -75,6 +80,7 @@
         <ul>
             <li><label><input type="range" name="--yumemi-rotate-speed" min="0.1" max="8.0" step="0.1" value="3.5" onchange="change_config(this.name, this.value + 's')"> 首振り速度</label></li>
         </ul>
+        イラスト: <a target="_blank" href="https://twitter.com/oashis/status/1687926511305883648">うにょーんセンパイ</a>
     </div>
 </div>
 
