--- a/akabeko/03.html
+++ b/akabeko/03.html
@@ -22,10 +22,12 @@
     #yumemi_head {
         position: fixed;
         z-index: 2;
+        filter: drop-shadow(2px 3px 6px rgba(16, 16, 16, 0.6));
     }
 
     #yumemi_body {
         position: fixed;
+        filter: drop-shadow(2px 3px 6px rgba(16, 16, 16, 0.6));
     }
 
     #yumemi_head .anime_rotate {
