--- a/akabeko/03.html
+++ b/akabeko/03.html
@@ -19,19 +19,40 @@
     }
     */
 
-    #yumemi_head {
+    #yumemi_head_group {
         position: fixed;
         z-index: 2;
-        filter: drop-shadow(2px 3px 6px rgba(16, 16, 16, 0.6));
+    }
+
+    #yumemi_head,
+    #yumemi_hair_right {
+        position: absolute;
+        top: 0;
     }
 
     #yumemi_body {
         position: fixed;
+    }
+
+    #yumemi_head,
+    #yumemi_body {
         filter: drop-shadow(2px 3px 6px rgba(16, 16, 16, 0.6));
     }
 
-    #yumemi_head .anime_rotate {
+    .anime_rotate {
         animation: rotate var(--yumemi-rotate-speed) ease-in-out infinite alternate;
+    }
+
+    .anime_hair {
+        animation: rotate_hair calc(var(--yumemi-rotate-speed) * 1.3) ease-in-out infinite alternate;
+    }
+
+    #yumemi_hair_left {
+        transform-origin: 142px 112px;
+    }
+
+    #yumemi_hair_right {
+        transform-origin: 448px 117px;
     }
 
     #yumemi img {
@@ -46,7 +67,17 @@
         }
 
         100% {
-            transform: rotate(-10deg) translateX(-1rem) translateY(0.5rem);
+            transform: rotate(-10deg) translateX(-1rem) translateY(0rem);
+        }
+    }
+
+    @keyframes rotate_hair {
+        0% {
+            transform: rotate(3deg);
+        }
+
+        100% {
+            transform: rotate(-6deg);
         }
     }
 
@@ -69,8 +100,14 @@
 </style>
 
 <div id="yumemi">
-    <div id="yumemi_head">
-        <div class="anime_rotate">
+    <div id="yumemi_head_group" class="anime_rotate">
+        <div id="yumemi_hair_left" class="anime_hair">
+            <img src="./yumemi_hair_left.png">
+        </div>
+        <div id="yumemi_hair_right" class="anime_hair">
+            <img src="./yumemi_hair_right.png">
+        </div>
+        <div id="yumemi_head">
             <img src="./yumemi_head.png">
         </div>
     </div>
